--- a/src/app/Shopping_list/shopping-list.component.html
+++ b/src/app/Shopping_list/shopping-list.component.html
@@ -4,7 +4,7 @@
         <hr>
         <ul class="list-group">
             <a class="list-group-item" style='cursor: pointer' *ngFor="let ingredient of ingredients; let i = index"
-            (click)="onSubmit(i)">
+            (click)="onEditItem(i)">
                 {{ingredient.name}} ({{ ingredient.amount }})
             </a>
         </ul>
